wxc/include/ewxw/wxc_glue.h

/* cbCommonPaneProperties */
TClassDefExtend(cbCommonPaneProperties,wxObject)
void       cbCommonPaneProperties_Assign( TSelf(cbCommonPaneProperties) _obj, void* _other );
int        cbCommonPaneProperties_BarCollapseIconsOn( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_BarDragHintsOn( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_BarFloatingOn( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_ColProportionsOn( TSelf(cbCommonPaneProperties) _obj );
TClass(cbCommonPaneProperties) cbCommonPaneProperties_CreateDefault(  );
void       cbCommonPaneProperties_Delete( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_ExactDockPredictionOn( TSelf(cbCommonPaneProperties) _obj );
void       cbCommonPaneProperties_MinCBarDim( TSelf(cbCommonPaneProperties) _obj, TSizeOutVoid(_w,_h) );
int        cbCommonPaneProperties_NonDestructFrictionOn( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_OutOfPaneDragOn( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_RealTimeUpdatesOn( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_ResizeHandleSize( TSelf(cbCommonPaneProperties) _obj );
int        cbCommonPaneProperties_RowProportionsOn( TSelf(cbCommonPaneProperties) _obj );
void       cbCommonPaneProperties_SetBarCollapseIconsOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetBarDragHintsOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetBarFloatingOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetColProportionsOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetExactDockPredictionOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetMinCBarDim( TSelf(cbCommonPaneProperties) _obj, TSize(_w,_h) );
void       cbCommonPaneProperties_SetNonDestructFrictionOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetOutOfPaneDragOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetRealTimeUpdatesOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetResizeHandleSize( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetRowProportionsOn( TSelf(cbCommonPaneProperties) _obj, int _val );
void       cbCommonPaneProperties_SetShow3DPaneBorderOn( TSelf(cbCommonPaneProperties) _obj, int _val );
int        cbCommonPaneProperties_Show3DPaneBorderOn( TSelf(cbCommonPaneProperties) _obj );
/* cbDynToolBarDimHandler */
TClassDefExtend(cbDynToolBarDimHandler,cbDimHandlerBase)
TClass(cbDynToolBarDimHandler) cbDynToolBarDimHandler_Create(  );
void       cbDynToolBarDimHandler_Delete( TSelf(cbDynToolBarDimHandler) _obj );
/* cbGCUpdatesMgr */
TClassDefExtend(cbGCUpdatesMgr,cbSimpleUpdatesMgr)
TClass(cbGCUpdatesMgr) cbGCUpdatesMgr_Create( void* pPanel );
TClass(cbGCUpdatesMgr) cbGCUpdatesMgr_CreateDefault(  );
void       cbGCUpdatesMgr_Delete( TSelf(cbGCUpdatesMgr) _obj );
void       cbGCUpdatesMgr_UpdateNow( TSelf(cbGCUpdatesMgr) _obj );
/* cbHintAnimationPlugin */
TClassDefExtend(cbHintAnimationPlugin,cbPluginBase)
TClass(cbHintAnimationPlugin) cbHintAnimationPlugin_Create( void* pPanel, int paneMask );
TClass(cbHintAnimationPlugin) cbHintAnimationPlugin_CreateDefault(  );
void       cbHintAnimationPlugin_Delete( TSelf(cbHintAnimationPlugin) _obj );
/* cbPaneDrawPlugin */
TClassDefExtend(cbPaneDrawPlugin,cbPluginBase)
TClass(cbPaneDrawPlugin) cbPaneDrawPlugin_Create( void* pPanel, int paneMask );
TClass(cbPaneDrawPlugin) cbPaneDrawPlugin_CreateDefault(  );
void       cbPaneDrawPlugin_Delete( TSelf(cbPaneDrawPlugin) _obj );
void*      cbPluginBase_Plugin( int _swt );
/* cbRowDragPlugin */
TClassDefExtend(cbRowDragPlugin,cbPluginBase)
TClass(cbRowDragPlugin) cbRowDragPlugin_Create( void* pPanel, int paneMask );
TClass(cbRowDragPlugin) cbRowDragPlugin_CreateDefault(  );
void       cbRowDragPlugin_Delete( TSelf(cbRowDragPlugin) _obj );
/* cbRowLayoutPlugin */
TClassDefExtend(cbRowLayoutPlugin,cbPluginBase)
TClass(cbRowLayoutPlugin) cbRowLayoutPlugin_Create( void* pPanel, int paneMask );
TClass(cbRowLayoutPlugin) cbRowLayoutPlugin_CreateDefault(  );
void       cbRowLayoutPlugin_Delete( TSelf(cbRowLayoutPlugin) _obj );
void*      wxDynamicToolBar_CreateTool( TSelf(wxDynamicToolBar) _obj, int id, void* label, void* bmpNormal, void* bmpDisabled, int kind, TClass(wxClientData) clientData, void* shortHelp, void* longHelp );
void*      wxDynamicToolBar_CreateToolControl( TSelf(wxDynamicToolBar) _obj, TClass(wxControl) control );
void       wxDynamicToolBar_DoEnableTool( TSelf(wxDynamicToolBar) _obj, void* tool, TBool enable );
void       wxDynamicToolBar_DoSetToggle( TSelf(wxDynamicToolBar) _obj, void* tool, int toggle );
void       wxDynamicToolBar_DoToggleTool( TSelf(wxDynamicToolBar) _obj, void* tool, int toggle );
/* wxNewBitmapButton */
TClassDefExtend(wxNewBitmapButton,wxPanel)
TClass(wxNewBitmapButton) wxNewBitmapButton_Create( void* labelBitmap, void* labelText, int alignText, TBool isFlat, int firedEventType, int marginX, int marginY, int textToLabelGap, TBool isSticky );
TClass(wxNewBitmapButton) wxNewBitmapButton_CreateFromFile( TSelf(wxNewBitmapButton) bitmapFileName, int bitmapFileType, void* labelText, int alignText, TBool isFlat, int firedEventType, int marginX, int marginY, int textToLabelGap, TBool isSticky );
void       wxNewBitmapButton_Delete( TSelf(wxNewBitmapButton) _obj );
void       wxNewBitmapButton_DrawDecorations( TSelf(wxNewBitmapButton) _obj, TClass(wxDC) dc );
void       wxNewBitmapButton_DrawLabel( TSelf(wxNewBitmapButton) _obj, TClass(wxDC) dc );
int        wxNewBitmapButton_Enable( TSelf(wxNewBitmapButton) _obj, TBool enable );
void       wxNewBitmapButton_Realize( TSelf(wxNewBitmapButton) _obj, TClass(wxWindow) _prt, int _id, TRect(_x,_y,_w,_h) );
void       wxNewBitmapButton_RenderAllLabelImages( TSelf(wxNewBitmapButton) _obj );
void       wxNewBitmapButton_RenderLabelImage( TSelf(wxNewBitmapButton) _obj, void* destBmp, void* srcBmp, TBool isEnabled, TBool isPressed );
void       wxNewBitmapButton_RenderLabelImages( TSelf(wxNewBitmapButton) _obj );
void       wxNewBitmapButton_Reshape( TSelf(wxNewBitmapButton) _obj );
void       wxNewBitmapButton_SetAlignments( TSelf(wxNewBitmapButton) _obj, int alignText, int marginX, int marginY, int textToLabelGap );
void       wxNewBitmapButton_SetLabel( TSelf(wxNewBitmapButton) _obj, void* labelBitmap, void* labelText );