wxcl/src/layout/cffi/wxFL.lisp


(defcfun ("wxDynamicToolBar_DoEnableTool" wxDynamicToolBar_DoEnableTool) :void
  (_obj :pointer)
  (tool :pointer)
  (enable :int))

(defcfun ("wxDynamicToolBar_DoToggleTool" wxDynamicToolBar_DoToggleTool) :void
  (_obj :pointer)
  (tool :pointer)
  (toggle :int))

(defcfun ("wxDynamicToolBar_DoSetToggle" wxDynamicToolBar_DoSetToggle) :void
  (_obj :pointer)
  (tool :pointer)
  (toggle :int))

(defcfun ("wxDynamicToolBar_CreateTool" wxDynamicToolBar_CreateTool) :pointer
  (_obj :pointer)
  (id :int)
  (label :pointer)
  (bmpNormal :pointer)
  (bmpDisabled :pointer)
  (kind :int)
  (clientData :pointer)
  (shortHelp :pointer)
  (longHelp :pointer))

(defcfun ("wxDynamicToolBar_CreateToolControl" wxDynamicToolBar_CreateToolControl) :pointer
  (_obj :pointer)
  (control :pointer))

(defcfun ("cbDynToolBarDimHandler_Create" cbDynToolBarDimHandler_Create) :pointer)

(defcfun ("cbDynToolBarDimHandler_Delete" cbDynToolBarDimHandler_Delete) :void
  (_obj :pointer))

(defcfun ("cbGCUpdatesMgr_Create" cbGCUpdatesMgr_Create) :pointer
  (pPanel :pointer))

(defcfun ("cbGCUpdatesMgr_CreateDefault" cbGCUpdatesMgr_CreateDefault) :pointer)

(defcfun ("cbGCUpdatesMgr_Delete" cbGCUpdatesMgr_Delete) :void
  (_obj :pointer))

(defcfun ("cbGCUpdatesMgr_UpdateNow" cbGCUpdatesMgr_UpdateNow) :void
  (_obj :pointer))

(defcfun ("cbHintAnimationPlugin_CreateDefault" cbHintAnimationPlugin_CreateDefault) :pointer)

(defcfun ("cbHintAnimationPlugin_Create" cbHintAnimationPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbHintAnimationPlugin_Delete" cbHintAnimationPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("wxNewBitmapButton_Create" wxNewBitmapButton_Create) :pointer
  (labelBitmap :pointer)
  (labelText :pointer)
  (alignText :int)
  (isFlat :int)
  (firedEventType :int)
  (marginX :int)
  (marginY :int)
  (textToLabelGap :int)
  (isSticky :int))

(defcfun ("wxNewBitmapButton_CreateFromFile" wxNewBitmapButton_CreateFromFile) :pointer
  (bitmapFileName :pointer)
  (bitmapFileType :int)
  (labelText :pointer)
  (alignText :int)
  (isFlat :int)
  (firedEventType :int)
  (marginX :int)
  (marginY :int)
  (textToLabelGap :int)
  (isSticky :int))

(defcfun ("wxNewBitmapButton_Realize" wxNewBitmapButton_Realize) :void
  (_obj :pointer)
  (_prt :pointer)
  (_id :int)
  (_x :int)
  (_y :int)
  (_w :int)
  (_h :int))

(defcfun ("wxNewBitmapButton_Delete" wxNewBitmapButton_Delete) :void
  (_obj :pointer))

(defcfun ("wxNewBitmapButton_Reshape" wxNewBitmapButton_Reshape) :void
  (_obj :pointer))

(defcfun ("wxNewBitmapButton_SetLabel" wxNewBitmapButton_SetLabel) :void
  (_obj :pointer)
  (labelBitmap :pointer)
  (labelText :pointer))

(defcfun ("wxNewBitmapButton_SetAlignments" wxNewBitmapButton_SetAlignments) :void
  (_obj :pointer)
  (alignText :int)
  (marginX :int)
  (marginY :int)
  (textToLabelGap :int))

(defcfun ("wxNewBitmapButton_DrawDecorations" wxNewBitmapButton_DrawDecorations) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxNewBitmapButton_DrawLabel" wxNewBitmapButton_DrawLabel) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxNewBitmapButton_RenderLabelImage" wxNewBitmapButton_RenderLabelImage) :void
  (_obj :pointer)
  (destBmp :pointer)
  (srcBmp :pointer)
  (isEnabled :int)
  (isPressed :int))

(defcfun ("wxNewBitmapButton_RenderLabelImages" wxNewBitmapButton_RenderLabelImages) :void
  (_obj :pointer))

(defcfun ("wxNewBitmapButton_RenderAllLabelImages" wxNewBitmapButton_RenderAllLabelImages) :void
  (_obj :pointer))

(defcfun ("wxNewBitmapButton_Enable" wxNewBitmapButton_Enable) :int
  (_obj :pointer)
  (enable :int))

(defcfun ("cbPaneDrawPlugin_CreateDefault" cbPaneDrawPlugin_CreateDefault) :pointer)

(defcfun ("cbPaneDrawPlugin_Create" cbPaneDrawPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbPaneDrawPlugin_Delete" cbPaneDrawPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("cbRowDragPlugin_CreateDefault" cbRowDragPlugin_CreateDefault) :pointer)

(defcfun ("cbRowDragPlugin_Create" cbRowDragPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbRowDragPlugin_Delete" cbRowDragPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("cbRowLayoutPlugin_CreateDefault" cbRowLayoutPlugin_CreateDefault) :pointer)

(defcfun ("cbRowLayoutPlugin_Create" cbRowLayoutPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbRowLayoutPlugin_Delete" cbRowLayoutPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("cbPluginBase_Plugin" cbPluginBase_Plugin) :pointer
  (_swt :int))

(defcfun ("cbCommonPaneProperties_CreateDefault" cbCommonPaneProperties_CreateDefault) :pointer)

(defcfun ("cbCommonPaneProperties_Delete" cbCommonPaneProperties_Delete) :void
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_RealTimeUpdatesOn" cbCommonPaneProperties_RealTimeUpdatesOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_OutOfPaneDragOn" cbCommonPaneProperties_OutOfPaneDragOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_ExactDockPredictionOn" cbCommonPaneProperties_ExactDockPredictionOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_NonDestructFrictionOn" cbCommonPaneProperties_NonDestructFrictionOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_Show3DPaneBorderOn" cbCommonPaneProperties_Show3DPaneBorderOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_BarFloatingOn" cbCommonPaneProperties_BarFloatingOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_RowProportionsOn" cbCommonPaneProperties_RowProportionsOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_ColProportionsOn" cbCommonPaneProperties_ColProportionsOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_BarCollapseIconsOn" cbCommonPaneProperties_BarCollapseIconsOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_BarDragHintsOn" cbCommonPaneProperties_BarDragHintsOn) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_MinCBarDim" cbCommonPaneProperties_MinCBarDim) :void
  (_obj :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbCommonPaneProperties_ResizeHandleSize" cbCommonPaneProperties_ResizeHandleSize) :int
  (_obj :pointer))

(defcfun ("cbCommonPaneProperties_SetRealTimeUpdatesOn" cbCommonPaneProperties_SetRealTimeUpdatesOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetOutOfPaneDragOn" cbCommonPaneProperties_SetOutOfPaneDragOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetExactDockPredictionOn" cbCommonPaneProperties_SetExactDockPredictionOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetNonDestructFrictionOn" cbCommonPaneProperties_SetNonDestructFrictionOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetShow3DPaneBorderOn" cbCommonPaneProperties_SetShow3DPaneBorderOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetBarFloatingOn" cbCommonPaneProperties_SetBarFloatingOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetRowProportionsOn" cbCommonPaneProperties_SetRowProportionsOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetColProportionsOn" cbCommonPaneProperties_SetColProportionsOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetBarCollapseIconsOn" cbCommonPaneProperties_SetBarCollapseIconsOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetBarDragHintsOn" cbCommonPaneProperties_SetBarDragHintsOn) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_SetMinCBarDim" cbCommonPaneProperties_SetMinCBarDim) :void
  (_obj :pointer)
  (_w :int)
  (_h :int))

(defcfun ("cbCommonPaneProperties_SetResizeHandleSize" cbCommonPaneProperties_SetResizeHandleSize) :void
  (_obj :pointer)
  (_val :int))

(defcfun ("cbCommonPaneProperties_Assign" cbCommonPaneProperties_Assign) :void
  (_obj :pointer)
  (_other :pointer))
